--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -252,6 +252,18 @@
     "\n",
     "train_and_evaluate_model(splitter, model)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b03b87be",
+   "metadata": {},
+   "source": [
+    "Выводы: \n",
+    "\n",
+    "- Наилучшие метрики модели показывают при простом разделении (аля train_test_split), однако при использовании KFold метрика приближается к baseline модели.\n",
+    "\n",
+    "- RandomForest показал лучшие результаты чем линейная регрессия с l1 регуляризацией."
+   ]
   }
  ],
  "metadata": {
